<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    android:background="@color/teal_700">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="5">
        <EditText
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/info"
            android:textSize="40dp"
            android:textColor="@color/gris_claro"
            android:backgroundTint="@android:color/transparent"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="7">
        <Button
            android:id="@+id/buttonreset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/boton0"
            android:backgroundTint="@color/gris_claro"
            android:textColor="#FF018786"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="6">
        <Button
            android:id="@+id/buttonsuma"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/boton2"
            android:backgroundTint="@color/teal_200"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonresta"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_200"
            android:text="@string/boton1" />

        <Button
            android:id="@+id/buttonmulti"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/botonmulti"
            android:backgroundTint="@color/teal_200"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/buttondiv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/botondivi"
            android:backgroundTint="@color/teal_200"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/buttonigual"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/botonigual"
            android:backgroundTint="@color/purple_200"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="7">

        <Button
            android:id="@+id/buttonuno"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/botonuno"
            android:layout_weight="1"
            android:backgroundTint="@color/claro"/>
        <Button
            android:id="@+id/buttondos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/botondos"
            android:backgroundTint="@color/claro"/>
        <Button
            android:id="@+id/buttontres"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/botontres"
            android:backgroundTint="@color/claro"/>
        <Button
            android:id="@+id/buttoncuatro"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/botoncuatro"
            android:backgroundTint="@color/claro"/>
        <Button
            android:id="@+id/buttoncinco"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/botoncinco"
            android:backgroundTint="@color/claro"/>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="7">

        <Button
            android:id="@+id/buttonseis"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/botonseis"
            android:backgroundTint="@color/claro"/>
        <Button
            android:id="@+id/buttonsiete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/botonsiete"
            android:backgroundTint="@color/claro"/>
        <Button
            android:id="@+id/buttonocho"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/botonocho"
            android:backgroundTint="@color/claro"/>
        <Button
            android:id="@+id/buttonnueve"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/botonnueve"
            android:backgroundTint="@color/claro"/>
        <Button
            android:id="@+id/buttoncero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/botoncero"
            android:layout_weight="1"
            android:backgroundTint="@color/claro"
            />

    </LinearLayout>
</LinearLayout>